Avance en Quimicos

--- a/css/climate.css
+++ b/css/climate.css
@@ -1,13 +1,10 @@
-@import url('https://fonts.cdnfonts.com/css/science-fair');
-@import url('https://fonts.cdnfonts.com/css/dameron');
 *{
     margin: 0px;
     padding: 0px;
     font-size: 10px;
 }
-body { min-height: 100vh; }
 body{
-    background-image: url("/img/potet.jpg");
+    background-image: url("/img/inferno.jpg");
     background-size: cover;
     background-attachment: fixed;
 
@@ -47,14 +44,9 @@ a::after{
 h1{
     text-align: center ;
     font-size: 40px;
-    font-family: 'Dameron Laser', sans-serif;
-
 }
 h2{
-    font-size: 40px;
-    font-family: 'Science Fair', sans-serif;
-    margin-top: 4rem;
-
+    font-size: 30px;
 }
 
 .atd{
@@ -80,14 +72,4 @@ section{
 .boton-imagen{
     width: 7rem;
     height:7rem ;
-}
-.seccion{
-    background-color: rgba(153, 153, 153, 0.7);
-    margin: 2rem;
-    text-align: center;
-}
-p{
-font-size: 2em;
-
-
 }
