--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,7 @@ section{
     width: 100px;
     height: 100px;
 }
-.btn-btn-primary{
-    width: 60px;
-    height: 20px;
-
+.boton-imagen{
+    width: 7rem;
+    height:7rem ;
 }
